fixed the form alignment

--- a/app/assets/stylesheets/components/_inputtype.scss
+++ b/app/assets/stylesheets/components/_inputtype.scss
@@ -16,7 +16,7 @@
   margin: 0 auto;
 }
 
-form {
+.form-inline {
   width: 100%;
   display:flex;
   flex-direction: row;
